
- Increased Response compatibility with webapp, implementing wsgi_write() and
  has_error().

- Changed some status messages to be the same as webapp:
  - 203: 'Non-Authoritative Information'
  - 302: 'Moved Temporarily'
  - 306: 'Unused'
  - 408: 'Request Time-out'
  - 414: 'Request-URI Too Large'
  - 504: 'Gateway Time-out'
  - 505: 'HTTP Version not supported'


Version 1.7.1 - June 14, 2011
=============================
- Added standalone redirect() function.

- RequestHandler.redirect and redirect_to now return a response object.

- Fixed: multiple routes that define methods are tried before MethodNotAllowed
  is raised.

- Updated webapp2_extras.protorpc to work with latest ProtoRPC.


Version 1.7 - June 4, 2011
==========================
- Added a simple configuration object for WSGIapplication, available in the
  config attribute. Extras modules that use configuration (i18n, jinja2,
  sessions) don't require app.config to be set manually anymore. Still, the
  `secret_key` key config for sessions, if not defined, will result in an
  exception.

- Deprecated webapp2_extras.config, replaced by the simpler app dict.

- Router no longer receives app on construction, for consistency with the
  config object. App is set as global before router is initialized.

- Fixed a bug in webapp2_extras.sessions that made it not save the session
  when it was empty (like when flashes are popped).

- Added standalone uri_for function, to be used in templates.


Version 1.6.3 - June 3, 2011
============================
- Added webap2_extras.local_app, with the WSGIApplication previously in
  webap2_extras.local. This allows using LocalProxy on App Engine, without
  actually monkeypatching the WSGI app for threaded environments.

- Route now raises exc.HTTPMethodNotAllowed if methods are set and the request
  method doesn't match.

- Router.default_matcher() now raises exc.HTTPNotFound if no route matches.


Version 1.6.2 - May 30, 2011
============================